# cmake_template

./: .gitmodules  CMakeLists.txt  main.cpp  merged.cmake  mergedConfig.cmake.in
cmake/: install.cmake  installConfig.cmake.in
cmake/Hunter/: config.cmake
docs/: CMakeLists.txt
include/cmake_template/sub1/: ClassA.h
include/cmake_template/sub2/: ClassB.h
include/cmake_tutorial/sub1/: ClassA.h
include/sub2/: ClassB.h
src/sub1/: CMakeLists.txt  ClassA.cpp  ClassA.h  internal.h
src/sub2/: CMakeLists.txt  ClassB.cpp  ClassB.h  internal.h
tests/: CMakeLists.txt  GlobalTest.cpp  GlobalTest.h
